# remind-hole

./: .gitignore  README.md  index.html  package-lock.json  package.json
public/lottie/: pulse-ring.json  stand-up.json  success-check.json  timer-breathe.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: devtools.rs  mod.rs  settings.rs  timer.rs
src-tauri/src/services/: mod.rs  stats_service.rs  timer_service.rs
src/components/: AlertOverlay.tsx  BlackHoleCanvas.tsx  Dashboard.tsx  EscapeGame.tsx  Onboarding.tsx  PreviewCanvas.tsx  Settings.tsx  StatsPanel.tsx
src/i18n/: index.tsx
src/i18n/locales/: en-US.ts  zh-CN.ts
src/services/: tauri-api.ts
src/utils/: blackhole-renderer.ts
