[package]
name = "remind-hole"
version = "0.1.0"
description = "久坐提醒黑洞应用"
authors = ["you"]
edition = "2021"

[lib]
name = "remind_hole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

